--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,6 +1,6 @@
 <div id="footer" class="section">
             	<div class="footercol">
-           	    <img style="padding:12px 0 0 45px;" src="images/logo_s.png" width="77" height="22" /></div>
+           	    </div>
               <div class="footercol">
                	<h5 class="fancy">Squiryl for Merchants</h5>
                  <ul>
