--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -31,7 +31,7 @@ body{
 	}
 
 	h1{
-	color:#6b7f7f;
+	color:#007573;
 	text-transform:uppercase;
 	font-weight:normal;
 	font-size:21px;
@@ -271,7 +271,7 @@ textarea:focus {
 }
 .pricing_table h3 {
 	text-transform: uppercase;
-	padding: 15px 0;
+	padding: 5px 0;
 	font-size: 14px;
 	font-weight: bold;
 }
@@ -305,7 +305,7 @@ textarea:focus {
 }
 
 .pricing_table .footer {
-	padding: 10px;
+	padding: 5px;
 	background: #333;
 	margin-top: 10px;
 }
@@ -1505,6 +1505,8 @@ margin-bottom: 40px;
 .button-container .button-group {
     vertical-align: top;
 }
+
+
 
 
 
