--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -13,21 +13,23 @@
 
   <div class="field">
     <%= f.label :name %><br />
-    <%= f.text_field :name %>
+    <%= f.text_field :name, size:40 %>
   </div>
   <div class="field">
     <%= f.label :address %><br />
-    <%= f.text_area :address %>
+    <%= f.text_area :address, rows:3, cols:40 %>
   </div>
   <div class="field">
     <%= f.label :email %><br />
-    <%= f.text_field :email %>
+    <%= f.text_field :email, size:40 %>
   </div>
   <div class="field">
-    <%= f.label :pay_type %><br />
-    <%= f.text_field :pay_type %>
+    <%= f.label :pay_type, "Payment" %><br />
+    <%= radio_button :order, :pay_type, "check" %> check
+    <%= radio_button :order, :pay_type, "creditcard" %> credit card
+     <%= radio_button :order, :pay_type, "purchaseorder" %> purchase order
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit 'Place Order', :class=>"button" %>
   </div>
 <% end %>
