--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -1,5 +1,5 @@
-<h1>Please entewr your Details</h1>
+<h1>Please enter your Details</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', orders_path %>
+
