--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -4,6 +4,8 @@
 
 
 <h1>Products List</h1>
+
+<p><%= paginate @products %></p>
 <% @products.each do |product| %>
   <ul class="pricing_table">
 	<li>
@@ -32,4 +34,8 @@
 	</li>
 </ul>
 <% end %>
+
+
+
+
 
