--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -23,7 +23,7 @@
   </tr>
 <% end %>
 </table>
-
+<%= paginate @products %>
 <br />
 
 <%= link_to 'New Product', new_product_path, :class => "button big" %>
