--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,9 +25,9 @@
                 <li class="divider">|</li>
                 <li><a href="#">Contact</a></li>
                 <li class="divider">|</li>
-                <li><%= link_to "Login", login_path %></li>
+                
             </ul>
-            <% if session[:user_id] %>
+    <% if session[:user_id] %>
  <ul>
  <li><%= link_to 'Orders', orders_path %></li>
  <li class="divider">|</li>
@@ -37,6 +37,8 @@
  <li class="divider">|</li>
  
  <li><%= button_to 'Logout', logout_path, :class => "button danger", method: :delete %></li>
+ <% else %>
+ <li><%= link_to "Login", login_path %></li>
  <% end %>
         </div>
     </div>
